test/files/pos/bug54.scala
class A {
  case class B(x: C) extends A {}
  class C {}
}
